@@ -1,12 +1,8 @@
 package com.tencentyun;
 
-// 使用旧版本 base64 编解码实现增强兼容性
-
-import sun.misc.BASE64Encoder;
-
-import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 import java.security.*;
-import java.nio.charset.Charset;
 
 import java.util.Arrays;
 import java.util.zip.Deflater;
@@ -109,17 +105,13 @@ public class TLSSigAPIv2 {
             contentToBeSigned += "TLS.userbuf:" + base64Userbuf + "\n";
         }
         try {
-            byte[] byteKey = key.getBytes("UTF-8");
+            byte[] byteKey = key.getBytes(StandardCharsets.UTF_8);
             Mac hmac = Mac.getInstance("HmacSHA256");
             SecretKeySpec keySpec = new SecretKeySpec(byteKey, "HmacSHA256");
             hmac.init(keySpec);
-            byte[] byteSig = hmac.doFinal(contentToBeSigned.getBytes("UTF-8"));
-            return (new BASE64Encoder().encode(byteSig)).replaceAll("\\s*", "");
-        } catch (UnsupportedEncodingException e) {
-            return "";
-        } catch (NoSuchAlgorithmException e) {
-            return "";
-        } catch (InvalidKeyException e) {
+            byte[] byteSig = hmac.doFinal(contentToBeSigned.getBytes(StandardCharsets.UTF_8));
+            return (Base64.getEncoder().encodeToString(byteSig)).replaceAll("\\s*", "");
+        } catch (NoSuchAlgorithmException | InvalidKeyException e) {
             return "";
         }
     }
@@ -137,7 +129,7 @@ public class TLSSigAPIv2 {
 
         String base64UserBuf = null;
         if (null != userbuf) {
-            base64UserBuf = new BASE64Encoder().encode(userbuf);
+            base64UserBuf = Base64.getEncoder().encodeToString(userbuf).replaceAll("\\s*", "");
             sigDoc.put("TLS.userbuf", base64UserBuf);
         }
         String sig = hmacsha256(userid, currTime, expire, base64UserBuf);
@@ -146,7 +138,7 @@ public class TLSSigAPIv2 {
         }
         sigDoc.put("TLS.sig", sig);
         Deflater compressor = new Deflater();
-        compressor.setInput(sigDoc.toString().getBytes(Charset.forName("UTF-8")));
+        compressor.setInput(sigDoc.toString().getBytes(StandardCharsets.UTF_8));
         compressor.finish();
         byte[] compressedBytes = new byte[2048];
         int compressedBytesLength = compressor.deflate(compressedBytes);
